--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
   background-color: #f2f2f2;
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Nunito', sans-serif;
   margin: 0;
   padding: 0;
   color: #333333;
+  transition: background-color 0.3s;
 }
 
 nav {
@@ -140,4 +141,10 @@ footer {
   #nav-links.active {
     display: flex;
   }
+}
+
+/* Body dim effect when menu is active */
+body.dimmed {
+  background-color: rgba(0, 0, 0, 0.7);
+  transition: background-color 0.5s;
 }
