--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ footer {
   #nav-links {
     position: absolute;
     top: 65px;
-    right: -300px; /* Hidden off-screen */
+    right: -300px; /* Start off-screen */
     background-color: #2a2a2a;
     flex-direction: column;
     gap: 20px;
