--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #1c1c1c;
-  font-family: 'Nunito', sans-serif; /* Nunito for body text */
+  font-family: 'Nunito', sans-serif; /* For body text */
   margin: 0;
   padding: 0;
   color: #f0f0f0;
